--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         </div>
         <ul class="nav-links">
             <li class="underline"><a href="#product">Product</a></li>
+            <li class="underline"><a href="#pricing">Pricing</a></li>
             <li class="underline"><a href="#faq">FAQ</a></li>
-            <li><a href="https://cal.com/omeroztok" class="cta-button">Book a Demo</a></li>
+            <li><a href="https://cal.com/sondra-demo" class="cta-button">Book a Demo</a></li>
         </ul>
     </nav>
 
@@ -35,7 +36,7 @@
         <div class="header-content">
             <h1>The White Hat AI-Agent</h1>
             <p>Advanced vulnerability scanning and domain security assessment powered by artificial intelligence</p>
-            <a href="https://cal.com/omeroztok" class="cta-button">Book a Demo</a>
+            <a href="https://cal.com/sondra-demo" class="cta-button">Book a Demo</a>
         </div>
     </section>
 
@@ -58,6 +59,47 @@
             <div class="product-card">
                 <h3>Actionable Reports</h3>
                 <p>Detailed vulnerability reports with clear remediation steps, risk prioritization, and compliance mapping to industry standards.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Pricing Section -->
+    <section id="pricing" class="pricing-section">
+        <h2 class="section-title">Choose Your Plan</h2>
+        <div class="pricing-container">
+            <div class="pricing-card">
+                <div class="pricing-header">
+                    <h3 class="plan-title">Individual</h3>
+                    <div class="price">
+                        <span class="price-amount">$20</span>
+                        <span class="price-period">/mo</span>
+                    </div>
+                </div>
+                <ul class="features-list">
+                    <li>Up to 10 domains scanning</li>
+                    <li>Weekly vulnerability reports</li>
+                    <li>AI-powered threat detection</li>
+                    <li>Email notifications</li>
+                    <li>Standard compliance reporting</li>
+                </ul>
+                <a href="https://cal.com/sondra-demo" class="pricing-button">Get Started</a>
+            </div>
+            
+            <div class="pricing-card enterprise">
+                <div class="pricing-header">
+                    <h3 class="plan-title">Enterprise</h3>
+                    <div class="price">
+                        <span class="price-amount">Custom</span>
+                    </div>
+                </div>
+                <ul class="features-list">
+                    <li>Unlimited domains and subdomains</li>
+                    <li>Real-time continuous monitoring</li>
+                    <li>Advanced AI threat intelligence</li>
+                    <li>Priority support</li>
+                    <li>Custom integrations & API access</li>
+                </ul>
+                <a href="https://cal.com/sondra-demo" class="pricing-button">Contact Sales</a>
             </div>
         </div>
     </section>
@@ -128,12 +170,13 @@
             <div class="footer-links">
                 <h4>Quick Links</h4>
                 <a href="#product">Product</a>
+                <a href="#pricing">Pricing</a>
                 <a href="#faq">FAQ</a>
-                <a href="https://cal.com/omeroztok">Book a Demo</a>
+                <a href="https://cal.com/sondra-demo">Book a Demo</a>
             </div>
             <div class="footer-contact">
                 <h4>Contact Us</h4>
-                <a href="mailto:berke@getsondra.com">berke@getsondra.com</a>
+                <a href="mailto:support@getsondra.com">support@getsondra.com</a>
             </div>
         </div>
     </footer>
